// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SettingsSectionCard - Snapshots > matches snapshot with custom className 1`] = `
<div
  class="flex w-full flex-col items-start gap-8 rounded-md bg-card px-6 py-8 md:p-12 custom-section"
  data-testid="container"
>
  <div
    class="flex w-full flex-col items-start gap-6"
    data-testid="container"
  >
    <div
      class="inline-flex items-center justify-start gap-3"
      data-testid="container"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-user"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
        />
        <circle
          cx="12"
          cy="7"
          r="4"
        />
      </svg>
      <h2
        class="text-2xl font-bold text-foreground leading-8"
        data-testid="heading-2"
      >
        Test Section
      </h2>
    </div>
  </div>
  <div
    class="flex w-full flex-col items-start gap-8 rounded-md border border-border bg-card p-6 shadow-lg md:gap-6"
    data-testid="container"
  >
    <div>
      Test content
    </div>
  </div>
</div>
`;

exports[`SettingsSectionCard - Snapshots > matches snapshot with description 1`] = `
<div
  class="flex w-full flex-col items-start gap-8 rounded-md bg-card px-6 py-8 md:p-12"
  data-testid="container"
>
  <div
    class="flex w-full flex-col items-start gap-6"
    data-testid="container"
  >
    <div
      class="inline-flex items-center justify-start gap-3"
      data-testid="container"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-user"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
        />
        <circle
          cx="12"
          cy="7"
          r="4"
        />
      </svg>
      <h2
        class="text-2xl font-bold text-foreground leading-8"
        data-testid="heading-2"
      >
        Test Section
      </h2>
    </div>
    <p
      class="text-base leading-6 font-medium text-secondary-foreground"
      data-testid="typography"
    >
      Test description
    </p>
  </div>
  <div
    class="flex w-full flex-col items-start gap-8 rounded-md border border-border bg-card p-6 shadow-lg md:gap-6"
    data-testid="container"
  >
    <div>
      Test content
    </div>
  </div>
</div>
`;

exports[`SettingsSectionCard - Snapshots > matches snapshot with icon and title 1`] = `
<div
  class="flex w-full flex-col items-start gap-8 rounded-md bg-card px-6 py-8 md:p-12"
  data-testid="container"
>
  <div
    class="flex w-full flex-col items-start gap-6"
    data-testid="container"
  >
    <div
      class="inline-flex items-center justify-start gap-3"
      data-testid="container"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-user"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
        />
        <circle
          cx="12"
          cy="7"
          r="4"
        />
      </svg>
      <h2
        class="text-2xl font-bold text-foreground leading-8"
        data-testid="heading-2"
      >
        Test Section
      </h2>
    </div>
  </div>
  <div
    class="flex w-full flex-col items-start gap-8 rounded-md border border-border bg-card p-6 shadow-lg md:gap-6"
    data-testid="container"
  >
    <div>
      Test content
    </div>
  </div>
</div>
`;

exports[`SettingsSectionCard - Snapshots > matches snapshot without icon and title 1`] = `
<div
  class="flex w-full flex-col items-start gap-8 rounded-md bg-card px-6 py-8 md:p-12"
  data-testid="container"
>
  <div
    class="flex w-full flex-col items-start gap-8 rounded-md border border-border bg-card p-6 shadow-lg md:gap-6"
    data-testid="container"
  >
    <div>
      Test content only
    </div>
  </div>
</div>
`;
